--- a/CodeNameSectorTests/CodeNameSectorTests.csproj
+++ b/CodeNameSectorTests/CodeNameSectorTests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector2Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
