--- a/CodeNameSector/CodeNameSector.csproj
+++ b/CodeNameSector/CodeNameSector.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector2.cs" />
+    <Compile Include="Vessel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
