--- a/CodeNameSectorTests/CodeNameSectorTests.csproj
+++ b/CodeNameSectorTests/CodeNameSectorTests.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector2Tests.cs" />
+    <Compile Include="VesselTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
