Add CollisionHelper class and tests.

--- a/CodeNameSectorTests/CodeNameSectorTests.csproj
+++ b/CodeNameSectorTests/CodeNameSectorTests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollisionHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector2Tests.cs" />
     <Compile Include="VesselTests.cs" />
