--- a/CodeNameSector/CodeNameSector.csproj
+++ b/CodeNameSector/CodeNameSector.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,7 +44,9 @@
     <Compile Include="CollisionHelper.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="PlayerShip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Submarine.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vessel.cs" />
   </ItemGroup>
